cmake_minimum_required(VERSION 3.5)

add_subdirectory(arrays)
add_subdirectory(linked_lists)
add_subdirectory(linked_lists_redo)
add_subdirectory(queue_array)
add_subdirectory(queue_linked_list)
add_subdirectory(hash_table)
add_subdirectory(binary_search)
add_subdirectory(bit_manipulation)
add_subdirectory(binary_search_tree)
add_subdirectory(priority_queue)
add_subdirectory(splay_tree)
add_subdirectory(merge_sort)
add_subdirectory(quick_sort)
add_subdirectory(graphs)
add_subdirectory(interview)
add_subdirectory(forking)
add_subdirectory(assembly)
